fix issue with small screen contact form collapse

--- a/main.css
+++ b/main.css
@@ -284,10 +284,10 @@ a:hover {
   white-space: nowrap;
 }
 
-@media (min-width: 576px) {
+/* @media (min-width: 576px) {
   .live-code-btn{
     margin:0;
-}
+} */
 
 @media (min-width: 768px) {
   .nav-links {
